@@ -12,7 +12,7 @@ extern str domain_name;
 extern const char UNKNOWN[];
 
 #define smtp_get_line() (ibuf_getstr_crlf(&inbuf, &line))
-extern int smtp_mainloop(const char* welcome);
+extern int smtp_mainloop(void);
 extern int smtp_dispatch(void);
 
 /* State variables */
